--- a/resources/sass/_apartment-details.scss
+++ b/resources/sass/_apartment-details.scss
@@ -40,9 +40,8 @@
         }
     }
     .img-container {
-        margin: 5rem 0 10rem;
+        margin: 5rem 0 0;
         width: 100%;
-        height: 400px;
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 1rem 1rem;
