--- a/resources/sass/_apartment-details.scss
+++ b/resources/sass/_apartment-details.scss
@@ -24,8 +24,16 @@
     .user-controls {
         text-align: right;
         margin-bottom: 3rem;
+
         a {
             margin-left: 2rem;
+            display: inline-block;
+
+            @media(max-width: 600px) {
+                width: 100%;
+                margin-bottom: 8px;
+                margin-left: 0;
+            }
         }
     }
     .apartment-header {
