--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10963,12 +10963,18 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 1.5rem;
+  padding: 20px;
 }
 
 header .logo {
   font-family: "Noto Serif Display", serif;
   color: #fff;
+}
+
+header a:hover {
+  transform: scale(1.1);
+  color: #FFAE00;
+  text-decoration: none;
 }
 
 header .guest,
@@ -10985,6 +10991,12 @@ header .logged-user a {
 header .guest a:first-of-type,
 header .logged-user a:first-of-type {
   margin-right: 1rem;
+}
+
+header .guest a:hover,
+header .logged-user a:hover {
+  color: #FFAE00;
+  text-decoration: none;
 }
 
 footer {
@@ -11136,6 +11148,7 @@ footer hr {
 }
 
 #user-dashboard .my-btn {
+  display: inline-block;
   background: #ffae00;
   color: #fff;
   border-radius: 30px;
@@ -11146,6 +11159,13 @@ footer hr {
   font-weight: bold;
 }
 
+@media (max-width: 580px) {
+  #user-dashboard .my-btn {
+    width: 100%;
+    margin-bottom: 8px;
+  }
+}
+
 #user-dashboard .my-btn:hover {
   background-color: #332b27;
 }
@@ -11154,7 +11174,6 @@ footer hr {
   background: #fff;
   border: solid #ffae00;
   color: #ffae00;
-  transition: all 0.3s e;
 }
 
 #user-dashboard .my-btn.btn-outline:hover {
@@ -11190,6 +11209,7 @@ footer hr {
 
 #user-dashboard .dash-head .my-btn {
   font-size: 1.5rem;
+  display: inline-block;
 }
 
 #user-dashboard .dash-ap-list {
@@ -11199,12 +11219,13 @@ footer hr {
 
 #user-dashboard .dash-ap-list .apartment {
   border: 1px solid #cbcbcb;
-  height: 150px;
+  min-height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 2rem;
   margin-bottom: 2rem;
+  gap: 40px;
   transition: all 0.2s ease;
 }
 
@@ -11220,22 +11241,54 @@ footer hr {
   justify-content: space-between;
 }
 
+@media (max-width: 580px) {
+  #user-dashboard .dash-ap-list .apartment .apartment-head,
+  #user-dashboard .dash-ap-list .apartment .apartment-foot {
+    flex-direction: column;
+  }
+}
+
 #user-dashboard .dash-ap-list .apartment .apartment-head {
   align-items: center;
 }
 
-#user-dashboard .dash-ap-list .apartment .apartment-head > a {
+#user-dashboard .dash-ap-list .apartment .apartment-head > div {
+  flex-shrink: 0;
+  text-align: right;
+}
+
+@media (max-width: 768px) {
+  #user-dashboard .dash-ap-list .apartment .apartment-head > div {
+    width: 100%;
+    flex-shrink: initial;
+  }
+}
+
+@media (max-width: 580px) {
+  #user-dashboard .dash-ap-list .apartment .apartment-head > div {
+    text-align: left;
+  }
+}
+
+#user-dashboard .dash-ap-list .apartment .apartment-head > div span {
+  font-weight: bold;
+}
+
+#user-dashboard .dash-ap-list .apartment .apartment-head > div .my-btn {
+  padding: 5px 10px;
+  width: auto;
+}
+
+#user-dashboard .dash-ap-list .apartment .apartment-head .aparment-title {
   font-size: 1.5rem;
   font-weight: bold;
   color: #000;
 }
 
-#user-dashboard .dash-ap-list .apartment .apartment-head div span {
-  font-weight: bold;
-}
-
-#user-dashboard .dash-ap-list .apartment .apartment-head div .my-btn {
-  padding: 5px 10px;
+@media (min-width: 480px) {
+  #user-dashboard .dash-ap-list .apartment .apartment-head .aparment-title {
+    padding-right: 20px;
+  }
 }
 
 #user-dashboard .dash-ap-list .apartment .apartment-foot .my-btn {
@@ -11276,6 +11329,15 @@ footer hr {
 
 #apartment-details .user-controls a {
   margin-left: 2rem;
+  display: inline-block;
+}
+
+@media (max-width: 600px) {
+  #apartment-details .user-controls a {
+    width: 100%;
+    margin-bottom: 8px;
+    margin-left: 0;
+  }
 }
 
 #apartment-details .apartment-header {
@@ -11293,9 +11355,8 @@ footer hr {
 }
 
 #apartment-details .img-container {
-  margin: 5rem 0 10rem;
+  margin: 5rem 0 0;
   width: 100%;
-  height: 400px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1rem 1rem;
